--- a/cocDetails.html
+++ b/cocDetails.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Details</title>
 </head>
 <body>
-    <main></main>
-    <script src="js/scriptTwo.js"></script> 
+    <main>
+        
+        <div class="description"></div>
+    </main>
+    <a id="return" href="index.html">Return to browse other options</a>
+    <script src="/js/scriptTwo.js"></script> 
 </body>
 </html>
